# DevScript

./: .gitignore  CMakeLists.txt  test.ds
src/: DevScriptInterpreter.cpp  DevScriptInterpreter.h  global.h  main.cpp
src/Command/: CopyFileCommand.cpp  CopyFileCommand.h  ICommand.h  MoveFileCommand.cpp  MoveFileCommand.h  NewDirCommand.cpp  NewDirCommand.h  NewFileCommand.cpp  NewFileCommand.h  RemoveFileCommand.cpp  RemoveFileCommand.h
src/CommandExecuter/: CommandExecuter.cpp  CommandExecuter.h  ICommandExecuter.cpp  ICommandExecuter.h
src/ScriptParser/: IScriptParser.cpp  IScriptParser.h  ScriptParser.cpp  ScriptParser.h
